# nn-matmul

./: CMakeLists.txt  README.md  matrix.cpp  matrix.hpp  mnist.cpp  nn-matmul.files  tests.cpp
